--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'sans-serif', 'Times New Roman';
+  font-family: 'sans-serif', 'Times New Roman', Times, serif;
 }
 
 body {
