--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,39 +1,65 @@
 * {
   margin: 0;
   padding: 0;
-  font-weight: 700;
 }
 
-.result {
-  background-color: #232858;
-  padding: 20px 10px;
-  text-align: right;
-  color: white;
+#root {
+  width: 100vw;
+  height: 100vh;
+}
+
+.button:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+.button:active {
+  opacity: 0.6;
 }
 
 .calculator {
-  display: -ms-grid;
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  height: 80vh;
+  background-color: #858693;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-style: solid;
+  border-color: grey;
+}
+
+.output {
+  height: 20%;
+  padding: 0 4px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: lightslategray;
+  color: white;
+  font-size: 50px;
+}
+
+.grid {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  -ms-grid-template-columns: auto auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1px;
+  margin-top: 1px;
 }
 
-button {
-  border-width: 1px;
-  border-color: #e4e4e4;
-  padding: 1.5rem;
+.grid-item {
+  border: none;
+  height: 80px;
+  font-size: 25px;
+  background-color: #efefef;
 }
 
-.grayButton {
-  background-color: #e0e0e0;
+.span-2-col {
+  grid-column: 1 / span 2;
 }
 
-.orangeButton {
-  background-color: #f5913e;
-}
-
-.grayButton-0 {
-  grid-column: 1/3;
-  -ms-grid-column: 1/3;
-  background-color: #e0e0e0;
+.bg-orange {
+  background-color: orange;
 }
